After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 653635 - Date isn't remembered when changing Who or What panes
Date isn't remembered when changing Who or What panes
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Archives
3.1.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-06-29 10:54 UTC by Emilio Pozuelo Monfort
Modified: 2011-06-29 11:06 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Emilio Pozuelo Monfort 2011-06-29 10:54:00 UTC
If I select a date, then change the Who or What panes, the date is changed to the newest one. It should be kept if it exists for the new selection.
Comment 2 Emilio Pozuelo Monfort 2011-06-29 11:06:29 UTC
Merged