LogWindow: keep the selected dates when changing Who or What

If the same dates are present for the new selection.

https://bugzilla.gnome.org/show_bug.cgi?id=653635